--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,9 @@
         {
             "src": "index.js",
             "use": "@vercel/node"
+        },{
+            "src": "*.ejs",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
